# axum_oauth_handson

./: Cargo.toml
.devcontainer/: docker-compose.yml
src/: main.rs  oauth.rs  structure.rs
src/oauth/: auth.rs  client.rs  index.rs  login.rs  logout.rs  protected.rs
src/structure/: app_error.rs  auth_redirect.rs  user.rs
